upgraded cloud-functions for node 20, and updated dependencies...

--- a/cloud-functions/.firebaserc
+++ b/cloud-functions/.firebaserc
@@ -1,5 +1,12 @@
 {
   "projects": {
-    "default": "squirl-blankly-slate"
-  }
+    "default": "blankly-135b6"
+  },
+  "targets": {},
+  "etags": {
+    "blankly-135b6": {
+      "extensionInstances": {}
+    }
+  },
+  "dataconnectEmulatorConfig": {}
 }
