Minor updates to configure new gcloud project

--- a/cloud-functions/.gitignore
+++ b/cloud-functions/.gitignore
@@ -1,6 +1,6 @@
 # Compiled JavaScript files
-lib/**/*.js
-lib/**/*.js.map
+functions/lib/**/*.js
+functions/lib/**/*.js.map
 
 # TypeScript v1 declaration files
 typings/
