--- a/cloud-functions/functions/package.json
+++ b/cloud-functions/functions/package.json
@@ -1,7 +1,7 @@
 {
   "name": "functions",
   "scripts": {
-    "lint": "eslint --ext .js,.ts ",
+    "lint": "eslint .",
     "build": "tsc",
     "build:watch": "tsc --watch",
     "serve": "npm run build && firebase emulators:start --only functions",
@@ -15,13 +15,13 @@
   },
   "main": "lib/index.js",
   "dependencies": {
+    "@google-cloud/firestore": "^7.9.0",
     "@google-cloud/functions-framework": "^3.4.2",
     "@sendgrid/mail": "^8.1.3",
     "axios": "^1.7.4",
     "firebase-admin": "^12.3.1",
     "firebase-functions": "^5.1.0",
     "mime-types": "^2.1.35",
-    "node-html-to-image": "^4.0.0",
     "stripe": "^16.8.0"
   },
   "devDependencies": {
