--- a/docker-base/cloudbuild.yaml
+++ b/docker-base/cloudbuild.yaml
@@ -1,5 +1,5 @@
 steps:
   - name: 'gcr.io/cloud-builders/docker'
-    args: [ 'build', '.', '-t', 'us-docker.pkg.dev/blankly-6ada5/blankly-base/blankly-base:${_PY_VERSION}', '--build-arg', 'PY_VERSION=$_PY_VERSION']
+    args: [ 'build', '.', '-t', 'europe-west2-docker.pkg.dev/blankly-135b6/blankly-base/blankly-base:${_PY_VERSION}', '--build-arg', 'PY_VERSION=$_PY_VERSION']
   - name: 'gcr.io/cloud-builders/docker'
-    args: ['push',              'us-docker.pkg.dev/blankly-6ada5/blankly-base/blankly-base:${_PY_VERSION}']
+    args: ['push',              'europe-west2-docker.pkg.dev/blankly-135b6/blankly-base/blankly-base:${_PY_VERSION}']
